adding testing functionality

--- a/c_code/Makefile
+++ b/c_code/Makefile
@@ -1,13 +1,8 @@
 CC = gcc
 CFLAGS = -Wall -pthread
 TARGET = server client
-PORT = 2006
 
 all: $(TARGET)
-
-kill-port:
-	@echo "Killing process using port $(PORT)..."
-	@PID=$$(lsof -t -i :$(PORT)) && [ ! -z "$$PID" ] && kill -9 $$PID || echo "No process found on port $(PORT)"
 
 server: server.c
 	$(CC) $(CFLAGS) server.c -o server
@@ -17,3 +12,5 @@ client: client.c
 
 clean:
 	rm -f $(TARGET)
+
+.PHONY: all clean
